# audio-test

tools/VoiceCallControl/: compilation.sh  host_compilation.sh
tools/abe-gen/: .gitignore  Makefile.am  configure.ac
tools/abe-gen/coeffs/: Makefile.am  amic.c  dl1.c  dl2l.c  dl2r.c  dmic.c  sdt.c
tools/abe-gen/fw/: Makefile.am
tools/abe-gen/src/: Makefile.am  abe_asrc.c  abegen.c  abegen.h
tools/abe-gen/tasks/: Makefile.am  abe-local.h  abe.c  abe_mem.h  abe_typ.h
tools/abe-gen/tasks/009590/: abe_addr.c
tools/abe/abe_hal/: abe_api.c  abe_api.h  abe_dat.c  abe_fw.h  abe_ini.c  abe_lib.c  abe_ref.h  abe_typ.h
tools/dmixer/: .gitignore  Makefile  Makefile.am  Makefile.inc  configure.ac
tools/dmixer/plugins/: Makefile.am
tools/dmixer/plugins/omap4plus/: abe-dl1dl2-twl6040.c
tools/dmixer/plugins/omap4plus/coeffs/: Makefile.am  amic.c  dl1.c  dl2l.c  dl2r.c  dmic.c  sdt.c
tools/dmixer/plugins/omap4plus/dapm/: Makefile.am
tools/dmixer/scripts/: abegen.sh
tools/dmixer/src/: Makefile  Makefile.am  lib.c  socfw.c  socfw.h
tools/dmixer/src/omap4plus/: Makefile.inc  abefw.c  abefw.h
tools/dmixer/src/omap4plus/coeffs/: Makefile  dl1-default.c  dl2-default.c
tools/dmixer/src/omap4plus/dapm/: Makefile  abe-dl1dl2-twl6040.c
tools/firmware/: Makefile  abe.h  abe_addr.c  abe_asrc.c  abe_typ.h  header.c
