

AM_CFLAGS = \
	-I$(top_srcdir)/src

AM_LDFLAGS = $(NODELETE_LDFLAGS)

#MODULE_LDFLAGS = $(AM_LDFLAGS) -module -disable-static -avoid-version $(LDFLAGS_NOUNDEFINED)

OMAP4CFLAGS = -I $(LINUX_DIR)/sound/soc/omap/abe


#dl1dir = $(libdir)/abe/coeffs
#dl1_LTLIBRARIES = dl1.la
#dl1_la_SOURCES = dl1.c
#dl1_la_LDFLAGS = $(MODULE_LDFLAGS)
#dl1_la_LIBADD = $(MODULE_LIBADD)
#dl1_la_CFLAGS = $(AM_CFLAGS) $(OMAP4CFLAGS)

